# libremotecontrol

./: .gitignore  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  control-command.cpp  control-command.h  libremotectl.pc.in  master.cpp  master.h  remotectl.h  set-linux-servo-pwm-command.cpp  set-linux-servo-pwm-command.h  slave.cpp  slave.h
test/: Makefile.am  helpers.cpp  helpers.h  serialize-test.cpp  servertest.cpp
